Add styles for mobile screens

--- a/index.html
+++ b/index.html
@@ -9,16 +9,46 @@
 
     <!-- Custom CSS styles -->
     <link rel="stylesheet" href="./css/styles.css">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
+        rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/fb61df7a3d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    Build The Community Your Fans Will Love
+    <header>
+        <img class="logo" src="./images/logo.svg" alt="Huddle Company Logo">
+        <img src="./images/illustration-mockups.svg" alt="Huddle Landing page">
+    </header>
 
-    Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-    Create connections with your users as you engage in genuine discussion.
+    <main>
+        <h1>Build The Community Your Fans Will Love</h1>
+        <p>
+            Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+            Create connections with your users as you engage in genuine discussion.
+        </p>
 
-    Register
+        <button class="button">Register</button>
+    </main>
+
+    <footer class="social-links">
+        <a class="social-icon" href="#">
+            <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a class="social-icon" href="#">
+            <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a class="social-icon" href="#">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+    </footer>
+
 </body>
 
 </html>
