Add styles for large screen sizes

--- a/index.html
+++ b/index.html
@@ -22,32 +22,39 @@
 
 <body>
 
-    <header>
+    <div class="container">
         <img class="logo" src="./images/logo.svg" alt="Huddle Company Logo">
-        <img src="./images/illustration-mockups.svg" alt="Huddle Landing page">
-    </header>
+    </div>
 
-    <main>
-        <h1>Build The Community Your Fans Will Love</h1>
-        <p>
-            Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-            Create connections with your users as you engage in genuine discussion.
-        </p>
+    <div class="container--flex">
+        <header>
+            <img class="hero" src="./images/illustration-mockups.svg" alt="Huddle Landing page">
+        </header>
 
-        <button class="button">Register</button>
-    </main>
+        <div class="content">
+            <main>
+                <h1>Build The Community Your Fans Will Love</h1>
+                <p>
+                    Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+                    Create connections with your users as you engage in genuine discussion.
+                </p>
 
-    <footer class="social-links">
-        <a class="social-icon" href="#">
-            <i class="fa-brands fa-facebook-f"></i>
-        </a>
-        <a class="social-icon" href="#">
-            <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a class="social-icon" href="#">
-            <i class="fa-brands fa-instagram"></i>
-        </a>
-    </footer>
+                <button class="button">Register</button>
+            </main>
+
+            <footer class="social-links">
+                <a class="social-icon" href="#">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a>
+                <a class="social-icon" href="#">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a class="social-icon" href="#">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </footer>
+        </div>
+    </div>
 
 </body>
 
